2002-06-07  H.J. Lu <hjl@gnu.org>

	* readelf.c (DW_CFA_GNU_args_size): Don't define.
	(DW_CFA_GNU_negative_offset_extended): Likewise.
	(DW_CFA_GNU_window_save): Likewise.
	(display_debug_frames): Handle DW_CFA_offset_extended_sf,
	DW_CFA_def_cfa_sf and DW_CFA_def_cfa_offset_sf.

2002-06-07  Elias Athanasopoulos  <eathan@otenet.gr>
	
	* nm.c: When computing size of symbols for an ELF target use the
	internal size field.

2002-06-06  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* testsuite/binutils-all/objcopy.exp: clear xfail for
	"hppa*64*-*-hpux*".
	* testsuite/binutils-all/hppa/objdump.exp: Return if
	"*64*-*-*".

2002-06-05  Alan Modra  <amodra@bigpond.net.au>

	* objcopy.c (copy_section): Don't copy SEC_GROUP sections.

2002-06-03  Elias Athanasopoulos  <eathan@otenet.gr>

	* objdump.c: Fix formatting.

2002-05-29  Ben Elliston  <bje@redhat.com>

	* MAINTAINERS: Add self as M68k maintainer.

2002-05-28  Kuang Hwa Lin <kuang@sbcglobal.net>

	* readelf.c: Modified/Added DLX elf support.

2002-05-27  Nick Clifton  <nickc@cambridge.redhat.com>

	* arsup.c: Fix formatting.
	* debug.c (debug_record_label): Add missing colon to error
	message.
	* ieee.c (parse_ieee_ty): Fix spelling typo.
	* readelf.c (process_program_headers): Remove English assumption
	about making a plural word.
	(process_section_headers): Likewise.
	(process_relocs): Allow quotes to be translated.
	(process_unwind): Likewise,
	(process_mips_specific): Improve error message.
	(get_note_type): Fix spelling typo.

	* configure.in (ALL_LINGUAS): Add sv
	* po/sv.po: New file.

2002-05-27  Alan Modra  <amodra@bigpond.net.au>

	* unwind-ia64.c (unw_print_brmask): Don't use sprintf.
	(unw_print_grmask): Likewise.
	(unw_print_frmask): Likewise.

2002-05-26  Kazu Hirata  <kazu@cs.umass.edu>

	* arsup.c: Remove ARGSUSED.
	* debug.c: Likewise.
	* ieee.c: Likewise.
	* nlmconv.c: Likewise.
	* prdbg.c: Likewise.
	* stabs.c: Likewise.
	* wrstabs.c: Likewise.

2002-05-25  Alan Modra  <amodra@bigpond.net.au>
